style.css
html {
  height: 100%;
}

body {
  background-color: #303841;
  margin: 0;
  font-family: "Lato", sans-serif;
  display: flex;
  flex-direction: column;
  min-height: 100%;
}

.header,
.container,
#status,
#timer,
.buttons,
.timer-settings-outer,
.settings-header,
.learn-more,
.footer {
  display: flex;
  justify-content: center;
  align-items: center;
}

.container {
  flex-direction: column;
}

.timer-contents {
  background-color: #f6c90e;
  border-radius: 2rem;
  width: 600px;
  max-width: 95%;
  margin: 1rem;
  color: #303841;
}

.header {
  background-color: #f6c90e;
  margin: 0 0 1rem 0;
}

.header h1 {
  font-size: 3rem;
  color: #303841;
  margin: 0;
  font-family: "Pattaya", sans-serif;
}

.learn-more {
  flex-direction: column;
  width: 600px;
  max-width: 95%;
  color: #eeeeee;
}

.learn-more-button {
  text-decoration: none;
  background-color: transparent;
  border: none;
  color: #f6c90e;
  font-size: 1.5rem;
  cursor: pointer;
}

.learn-more-button::after {
  content: "\25be";
  float: right;
  transform: scale(1.5);
}

.learn-more-button-active::after {
  content: "\25b4";
}

.learn-more-content {
  display: none;
  font-size: 1.25rem;
}

.learn-more-content a {
  text-decoration: none;
  color: #f6c90e;
}

.learn-more-content li {
  padding-bottom: 1rem;
}

.learn-more-content.active {
  display: block;
}

#timer {
  font-size: 10rem;
  margin: 1rem;
}

#status {
  font-size: 4rem;
  margin: 1rem;
  font-family: "Pattaya", sans-serif;
}

.button {
  text-decoration: none;
  border: 3px solid #fff;
  border-radius: 4rem;
  cursor: pointer;
  padding: 20px;
  background-color: #303841;
  height: 100px;
  width: 100px;
  margin: 2% 5%;
}

.button img {
  height: 40px;
}

.button:hover {
  background-color: rgb(40, 40, 40);
}

.settings {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0) /*scale(0) = Invisible*/;
  background-color: #fff;
  border-radius: 1rem;
  box-sizing: border-box;
  z-index: 10;
  width: 95%;
  max-width: 400px;
  padding: 20px 20px 0;
}

.settings.active {
  transform: translate(-50%, -50%) scale(1);
}

.settings-header {
  padding: 10px 0;
  justify-content: space-between;
  border-bottom: 1px solid black;
}

.settings-title {
  font-size: 1.25rem;
  font-weight: bold;
}

.close-button {
  cursor: pointer;
  border: none;
  outline: none;
  background: none;
  font-size: 1.25rem;
  font-weight: bold;
}

.close-button:hover {
  color: rgb(209, 56, 56);
}

.timer-settings-outer {
  justify-content: space-evenly;
  padding: 0 0 10px;
}

.timer-settings {
  max-width: 30%;
  margin: 0;
}

.time-selector {
  border-radius: 2px;
  background-color: rgb(240, 240, 240);
  font-size: 1rem;
  padding: 10px;
  border: medium none;
  color: rgb(85, 85, 85);
}

.time-selector:focus {
  outline: none;
}

#overlay {
  position: fixed;
  opacity: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: hsla(0, 0%, 0%, 0.5);
  pointer-events: none;
}

#overlay.active {
  pointer-events: all;
  opacity: 1;
}

.footer {
  font-size: 6rem;
  background-color: 3a4750;
  margin-top: auto;
}

.footer a {
  color: rgb(255, 255, 255);
}

@media only screen and (max-width: 768px) {
  /* For mobile phones: */
  .button {
    margin: 2%, 2.5%;
  }
  #timer {
    font-size: 8rem;
  }
}

